lab4-network-falco-aks/evidence/networkpolicy.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    creationTimestamp: "2025-11-02T18:30:21Z"
    generation: 1
    name: deny-all
    namespace: default
    resourceVersion: "1448"
    uid: bfad5ed3-7e3a-46c5-a753-02d99246a7ee
  spec:
    podSelector: {}
    policyTypes:
    - Ingress
    - Egress
kind: List
metadata:
  resourceVersion: ""
